# fusiqc

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: lint.yml  publish.yml
src/fusiqc/: __init__.py  _cli.py  _config.py  _dataset.py  _qc.py  _web.py
